// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toBeBoolean should return false for {} 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'object'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for 1 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'number'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for Symbol() 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'symbol'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for aa 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'string'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for asymmetricMatcher of any value that is not boolean 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'any(Number)'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for boolean with isNot true 1`] = `
Object {
  "message": "    
    expect value's type not to be Boolean.
    received: 'boolean'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for null 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'null'
",
  "pass": false,
}
`;

exports[`testing toBeBoolean should return false for undefined 1`] = `
Object {
  "message": "    
    expect value's type to be Boolean.
    received: 'undefined'
",
  "pass": false,
}
`;
